testdata/snapshots/slatedb__row_codec__tests__long key suffix.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "long key suffix",
    [
        0,
        2,
        0,
        100,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        107,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        0,
        0,
        0,
        0,
        5,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 2,
        key_suffix: b"kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk",
        seq: 1,
        expire_ts: None,
        create_ts: None,
        value: Value(
            b"value",
        ),
    },
    b"lokkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk",
)
