testdata/snapshots/slatedb__row_codec__tests__long key suffix_decoded.snap
---
source: src/row_codec.rs
expression: decoded
snapshot_kind: text
---
SstRowEntry {
    key_prefix_len: 2,
    key_suffix: b"kkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk",
    seq: 1,
    expire_ts: None,
    create_ts: None,
    value: Value(
        b"value",
    ),
}
