testdata/snapshots/slatedb__row_codec__tests__normal row with expire_ts.snap
---
source: src/row_codec.rs
expression: output
snapshot_kind: text
---
(
    "normal row with expire_ts",
    [
        0,
        3,
        0,
        3,
        107,
        101,
        121,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        1,
        2,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        10,
        0,
        0,
        0,
        5,
        118,
        97,
        108,
        117,
        101,
    ],
    SstRowEntry {
        key_prefix_len: 3,
        key_suffix: b"key",
        seq: 1,
        expire_ts: Some(
            10,
        ),
        create_ts: None,
        value: Value(
            b"value",
        ),
    },
    b"prekey",
)
