testdata/snapshots/slatedb__row_codec__tests__normal row without expire_ts_encoded.snap
---
source: src/row_codec.rs
expression: encoded_data
snapshot_kind: text
---
[
    0,
    3,
    0,
    3,
    107,
    101,
    121,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    5,
    118,
    97,
    108,
    117,
    101,
]
